# be/app/controllers/api/v1/todo_images_controller.rb
@@ -3,17 +3,6 @@ module Api
     class TodoImagesController < ApplicationController
       before_action :set_todo
 
-      def create
-        @todo.image.attach(params.expect(:image))
-
-        if @todo.valid?
-          render json: @todo
-        else
-          @todo.image.purge
-          render json: { errors: @todo.errors }, status: :unprocessable_entity
-        end
-      end
-
       def destroy
         if @todo.image.attached?
           @todo.image.purge
